Second attempt fixing scrollbars

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -63,7 +63,7 @@ img[width][height] {
   .header {
     position: fixed;
     width: 100%;
-    overflow: hidden;
+    overflow: auto;
     top: 0;
   }
 
@@ -227,7 +227,7 @@ small {
   box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
   width: 348px;
   max-height: 148px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .backlink__preview::after {
@@ -268,7 +268,7 @@ small {
     position: relative;
     display: block;
     box-shadow: 0 0 65px 15px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
+    overflow: auto;
     border-radius: 3px;
   }
   .window .header {
@@ -279,7 +279,7 @@ small {
     height: 50px;
     width: 100%;
     background: var(--byzantine);
-    overflow: hidden;
+    overflow: auto;
     transition: all 0.5s ease-out, background 1s ease-out;
     transition-delay: 0.2s;
     z-index: 1;
@@ -425,7 +425,7 @@ small {
     font-family: Roboto;
     padding: 67px 4% 0;
     text-align: justify;
-    overflow: scroll;
+    overflow: auto;
     max-height: 100%;
   }
   .window .content::-webkit-scrollbar {
